kubernetes/ingress/gateway-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - ftown.dev
      secretName: ftown-dev-tls
  rules:
    - host: ftown.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: om-svc-gateway
                port:
                  number: 80
